# DART

./: .gitignore  README.md
Certificates/: README.md  ca.crt  ca.csr  ca.key  ca.kst  ca.p12
Certificates/clients/: yourdomain.csr  yourdomain.jks  yourdomain.p7b
Client/: pom.xml
Client/common/: pom.xml
Client/dispatcher-client/: pom.xml
Design/: README.md
Design/architecture/: ArchitectureDiagrams.graffle  resources-module.md
Design/message-formats/: README.md  resource-messages.md
Design/ui-design/: dispatcher-ui-sketches.graffle
Implementation/: README.md
Implementation/AndroidModules/: README.md
Implementation/CSharpModules/: .gitignore  README.md
Implementation/CSharpModules/DART.Base/: DART.Base.sln
Implementation/ChromeModules/: README.md
Implementation/ElectronModules/Dispatcher/: bower.json  index.html  index.js  main.js  package.json
Implementation/JavaModules/: README.md  pom.xml
Implementation/JavaModules/common/: pom.xml
Implementation/JavaModules/common-ui/: pom.xml
Implementation/JavaModules/dart-accounts-module/: README.md  pom.xml
Implementation/JavaModules/dart-alerting-module/: pom.xml
Implementation/Messaging/: pom.xml
Mobile/app/: build.gradle  proguard-rules.pro
POC/: README.md
POC/JavaPOC/: README.md  pom.xml
Playground/Runboard/: CMakeLists.txt
Playground/Runboard/include/: mainframe.hpp  runboardapp.hpp
Playground/Runboard/src/: mainframe.cpp  runboardapp.cpp
Playground/Server/: pom.xml
Server/: pom.xml
Server/certificate-manager/: .gitignore  pom.xml
Server/mobile-messaging/: pom.xml
(+639 files in other folders)
